[tool.poetry]
name = "eagerx_reality"
version = "0.1.3"
license = "Apache2.0"
description = "Simple bridge that can be used in reality together with several useful nodes."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_reality"
repository = "https://github.com/eager-dev/eagerx_reality"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.6.2"
eagerx = "^0.1.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
